PlzNavigate: Invoke didFailProvisionalLoad() in the renderer when a navigation request is cancelled or fails

Navigation requests can be cancelled or they could fail. In the latter case we do send an IPC FrameMsg_FailedNavigation
to the renderer where we display error pages etc. However we don't invoke didFailProvisionalLoad() which causes a number
of blink layout tests to fail. In any case we send out a didStartProvisionalLoad() notification in blink when plznavigate
handles navigation requests. We can safely call didFailProvisionalLoad() notification when the navigation fails.

For cancelled navigations like external URLs etc we invoke the didFailProvisionalLoad() handler for client side navigations in FrameLoader::stopAllLoaders()

BUG=640631
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2687593002
Cr-Commit-Position: refs/heads/master@{#449412}

Former-commit-id: a85730c84d15b89b04bf58ed6efda2050c9de619